# spotify_to_ytmusic

./: README.md  README_OPTIMIZED.md  example_usage.py  headers_auth.json.example  pyproject.toml  test_playlist_2songs.json
spotify2ytmusic/: __main__.py  backend.py  cli.py  spotify_backup.py  utils.py
